--- a/src/itc505/lab/4/index.html
+++ b/src/itc505/lab/4/index.html
@@ -77,6 +77,29 @@
     The project demonstrates that IoT technologies have a profound impact on enhancing smart home automation. By focusing on device interoperability, user control, and energy efficiency, this research project contributes to the growing field of IoT applications.
     The future of smart homes is brighter and more user-friendly thanks to the advancements made in this project. By simplifying the user experience, improving device interoperability, and promoting energy-efficient practices, we take another step closer to realizing the full potential of IoT in our daily lives.
 </p>
+<section id="addendum">
+    <h2>HTML Abuse</h2>
+
+    <h3>Font Choices</h3>
+    <p>
+        For this document, we carefully selected font styles to enhance readability and aesthetics. We utilized the 'Arial' font-family for the main content, ensuring clear and modern typography. Subheadings use a 'sans-serif' fallback in case 'Arial' is unavailable, to maintain a consistent look.
+    </p>
+
+    <h3>Sizes of Headings and Main Text</h3>
+    <p>
+        We applied different font sizes for headings and main text to establish a clear visual hierarchy. The main heading (h1) is styled with a large 36px font size, making it prominent. Subheadings (h2) have a slightly smaller font size of 28px, creating a distinction. The main text (p) uses an 18px font size for a comfortable reading experience.
+    </p>
+
+    <h3>Color Choices</h3>
+    <p>
+        We carefully selected colors to create a visually pleasing and coherent design. The main heading (h1) uses '#2471A3' , subheadings (h2) use '#FF5733' (Deep Orange), and main text (p) is in '#333' (Dark Gray). Strong text is highlighted with a vibrant '#007f00' (Green) color. Links (a) are emphasized with '#e94e77' (Rose Pink).
+    </p>
+
+    <h3>Margin and Padding Choices</h3>
+    <p>
+        We added margin and padding choices to create an organized and visually appealing layout. The entire document has a 20px margin and 20px padding to ensure proper spacing. The main heading (h1) has a 10px padding, and subheadings (h2) have 5px padding. Paragraph text (p) and list items (li) include 10px padding, providing a comfortable reading experience. Code sections (code) have a 10px padding. Unordered lists (ul) have a 20px left margin and 20px left padding to maintain structure.
+    </p>
+</section>
 
 </body>
 </html>
